--- a/voita_app/pubspec.yaml
+++ b/voita_app/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  postgres: ^3.2.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +50,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.9
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,8 +66,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-    # - assets/
+  assets:
+    - assets/person.png
+    - assets/home.png
+    - assets/groups.png
+    - assets/add_note.png
+    - assets/micro.jpg
+    - assets/search.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
