--- a/voita_app/pubspec.yaml
+++ b/voita_app/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.1
   json_annotation: ^4.9.0
+  flutter_sound: ^9.4.9
+  permission_handler: ^11.3.1
+  http: ^1.2.1
+  flutter_isolate: ^2.0.5-pre
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +77,8 @@ flutter:
     - assets/add_note.png
     - assets/micro.jpg
     - assets/search.png
+    - assets/share.png
+    - assets/stop-button.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
