--- a/voita_app/android/app/src/debug/AndroidManifest.xml
+++ b/voita_app/android/app/src/debug/AndroidManifest.xml
@@ -3,5 +3,10 @@
          the Flutter tool needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
+
+    <uses-sdk
+        android:minSdkVersion="21"
+        android:targetSdkVersion="21" />
+        
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
