--- a/voita_app/pubspec.yaml
+++ b/voita_app/pubspec.yaml
@@ -39,10 +39,17 @@ dependencies:
   equatable: ^2.0.5
   flutter_bloc: ^8.1.1
   json_annotation: ^4.9.0
-  flutter_sound: ^9.4.9
   permission_handler: ^11.3.1
   http: ^1.2.1
   flutter_isolate: ^2.0.5-pre
+  shared_preferences: ^2.2.3
+  record: ^5.0.0
+  flutter_voice_processor: ^1.1.1
+  intl: ^0.18.1
+  flutter_localizations:
+    sdk: flutter
+  flutter_slidable: ^3.1.0
+  flutter_advanced_switch: ^3.1.0
 
 dev_dependencies:
   flutter_test:
