--- a/voita_app/android/app/build.gradle
+++ b/voita_app/android/app/build.gradle
@@ -45,8 +45,8 @@ android {
         applicationId "com.example.voita_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 23
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 29
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
