--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Install dependencies
         run: flutter pub get
+        working-directory: ${{ github.workspace }}
 
       # Uncomment this step to verify the use of 'dart format' on each commit.
       # - name: Verify formatting
