--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,9 +5,9 @@
           
 on:
   push:
-    branches: [ "main", "beta" ]
+    branches: [ "*" ]
   pull_request:
-    branches: [ "main", "beta" ]
+    branches: [ "*" ]
 
 jobs:
   build:
