--- a/voita_app/pubspec.yaml
+++ b/voita_app/pubspec.yaml
@@ -42,11 +42,15 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.2.3
   flutter_voice_processor: ^1.1.1
-  intl: ^0.18.1
+  intl: any
   flutter_localizations:
     sdk: flutter
   flutter_slidable: ^3.1.0
   supabase_flutter: ^2.5.3
+  path_provider: ^2.1.3
+  flutter_silero_vad:
+    git:
+      url: https://github.com/char5742/flutter_silero_vad.git
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +87,7 @@ flutter:
     - assets/search.png
     - assets/share.png
     - assets/stop-button.png
+    - assets/silero-vad/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
