--- a/AudioCapture/AudioCaptureConsole/audio-capture.vcxproj.filters
+++ b/AudioCapture/AudioCaptureConsole/audio-capture.vcxproj.filters
@@ -20,6 +20,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natvis" />
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
