--- a/AudioCapture/DuplexAudioCapture/DuplexAudioCapture.vcxproj.filters
+++ b/AudioCapture/DuplexAudioCapture/DuplexAudioCapture.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClInclude Include="StreamCapture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StreamMerger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="circular_buffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -68,8 +74,14 @@
     <ClCompile Include="StreamCapture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StreamMerger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="$(MSBuildThisFileDirectory)..\..\natvis\wil.natvis" />
   </ItemGroup>
 </Project>
