--- a/AudioCapture/AudioCaptureConsole/audio-capture.vcxproj
+++ b/AudioCapture/AudioCaptureConsole/audio-capture.vcxproj
@@ -104,7 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\forru\source\repos\DuplexAudioCapture;C:\Users\forru\source\repos\audio-capture</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Voita\AudioCapture\DuplexAudioCapture</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
