--- a/AudioCapture/DuplexAudioCapture/DuplexAudioCapture.vcxproj
+++ b/AudioCapture/DuplexAudioCapture/DuplexAudioCapture.vcxproj
@@ -168,9 +168,8 @@ Mfplat.lib
     <ClInclude Include="include\LoopbackCapture.h" />
     <ClInclude Include="include\pch.h" />
     <ClInclude Include="include\ProcessManager.h" />
-    <ClInclude Include="include\Sink.h" />
     <ClInclude Include="include\StreamCapture.h" />
-    <ClInclude Include="include\StreamMerger.h" />
+    <ClInclude Include="include\StreamMixer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\AudioFile.cpp" />
@@ -179,9 +178,8 @@ Mfplat.lib
     <ClCompile Include="src\LoopbackCapture.cpp" />
     <ClCompile Include="src\pch.cpp" />
     <ClCompile Include="src\ProcessManager.cpp" />
-    <ClCompile Include="src\Sink.cpp" />
     <ClCompile Include="src\StreamCapture.cpp" />
-    <ClCompile Include="src\StreamMerger.cpp" />
+    <ClCompile Include="src\StreamMixer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
