plugin interfers with main window, but it works (to be fixed)

--- a/voita_app/pubspec.yaml
+++ b/voita_app/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
       url: https://github.com/char5742/flutter_silero_vad.git
   go_router: ^14.2.0
   get_it: ^7.7.0
+  voita_audio:
+    path: "../voita_audio" 
+
 
 dev_dependencies:
   flutter_test:
