--- a/AudioCapture/DuplexAudioCapture/DuplexAudioCapture.vcxproj.filters
+++ b/AudioCapture/DuplexAudioCapture/DuplexAudioCapture.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="include\Resampler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="LoopBack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FullLoopbackCapture.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\AudioFile.cpp">
@@ -75,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Resampler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FullLoopbackCapture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
